objects/CMPL123__Context_Based_Security__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Access_Type__c</fullName>
        <label>Access Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read-Only</fullName>
                    <default>true</default>
                    <label>Read-Only</label>
                </value>
                <value>
                    <fullName>Read-Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Config_Deploy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Config Deploy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Corresponding_Object__c</fullName>
        <formula>CMPL123__Workflow_Rule__r.CMPL123__Target_Object_API_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corresponding Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Initial_CBS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial CBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__User_Field_On_Record__c</fullName>
        <label>User Field (API name) on Record</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Workflow_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Workflow Rule</label>
        <referenceTo>CMPL123__WF_Rule__c</referenceTo>
        <relationshipLabel>Context-Based Security</relationshipLabel>
        <relationshipName>Context_Based_Security</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Workflow_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Step</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Workflow Step must belong to the selected Workflow Rule.</errorMessage>
            <filterItems>
                <field>$Source.CMPL123__Workflow_Rule__c</field>
                <operation>equals</operation>
                <valueField>CMPL123__WF_Step__c.CMPL123__WF_Rule__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123__WF_Step__c</referenceTo>
        <relationshipLabel>Context-Based Security</relationshipLabel>
        <relationshipName>Context_Based_Security</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Context-Based Security</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Workflow_Rule__c</columns>
        <columns>CMPL123__Workflow_Step__c</columns>
        <columns>CMPL123__Corresponding_Object__c</columns>
        <columns>CMPL123__User_Field_On_Record__c</columns>
        <columns>CMPL123__Access_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Context-Based Security Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context-Based Security</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123__No_Initial_CBS_for_Workflow_Step</fullName>
        <active>true</active>
        <description>You cannot create an Initial CBS rule for a Workflow Step.</description>
        <errorConditionFormula>AND(CMPL123__Initial_CBS__c = true, NOT(ISBLANK( CMPL123__Workflow_Step__c )))</errorConditionFormula>
        <errorMessage>You cannot create an Initial CBS rule for a Workflow Step. Either uncheck the Initial CBS checkbox or clear the Workflow Step field.</errorMessage>
    </validationRules>
</CustomObject>